dataset1235/2025-2/2868285114/users/154215138/executions/2135592949_4190502342.log
== SUBMISSION (2025-08-14 14:08:14)
-- CODE: 
A = 4
C = 180
(print("Cada um deve pagar", C / A ,"R$"))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:02:15)
-- CODE: 
A = 4
C = 180
(print("Cada um deve pagar", fC / A ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    (print("Cada um deve pagar", fC / A ,"R$"))
                                 ^^
NameError: name 'fC' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    (print("Cada um deve pagar", fC / A ,"R$"))
                                 ^^
NameError: name 'fC' is not defined. Did you mean: 'C'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:00:54)
-- CODE: 
A = 4
C = 180
print("Cada um deve pagar", C / A)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:08:40)
-- CODE: 
A = 4
C = 180
print(C / A ,"R$")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0 R$
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:08:52)
-- CODE: 
A = 4
C = 180
print(C / A)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:01:49)
-- CODE: 
A = 4
C = 180
float(print("Cada um deve pagar", C / A ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    float(print("Cada um deve pagar", C / A ,"R$"))
TypeError: float() argument must be a string or a real number, not 'NoneType'
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    float(print("Cada um deve pagar", C / A ,"R$"))
TypeError: float() argument must be a string or a real number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:02:33)
-- CODE: 
A = 4
C = 180
(print("Cada um deve pagar", C / A ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:02:02)
-- CODE: 
A = 4
C = 180
int(print("Cada um deve pagar", C / A ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(print("Cada um deve pagar", C / A ,"R$"))
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'NoneType'
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int(print("Cada um deve pagar", C / A ,"R$"))
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:06:05)
-- CODE: 
A = 4
C = 180
(print("Cada um deve pagar", f{C / A : g} ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    (print("Cada um deve pagar", f{C / A : g} ,"R$"))
                                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    (print("Cada um deve pagar", f{C / A : g} ,"R$"))
                                 ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 14:08:42)
-- CODE: 
A = 4
C = 180
print(C / A ,"R$")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0 R$
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0 R$
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:01:23)
-- CODE: 
A = 4
C = 180
print("Cada um deve pagar", C / A ,"R$")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:06:20)
-- CODE: 
A = 4
C = 180
(print("Cada um deve pagar", C / A ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
Cada um deve pagar 45.0 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 14:08:54)
-- CODE: 
A = 4
C = 180
print(C / A)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:05:21)
-- CODE: 
A = 4
C = 180
(print("Cada um deve pagar", f{C / A} ,"R$"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    (print("Cada um deve pagar", f{C / A} ,"R$"))
                                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    (print("Cada um deve pagar", f{C / A} ,"R$"))
                                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 14:01:12)
-- CODE: 
A = 4
C = 180
print("Cada um deve pagar", C / A"R$")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    print("Cada um deve pagar", C / A"R$")
                                ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    print("Cada um deve pagar", C / A"R$")
                                ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
